// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytics > GoogleAnalytics init 1`] = `
Object {
  "ampTriggers": Object {},
  "ampVars": Object {},
}
`;

exports[`Analytics > GoogleAnalytics init 2`] = `
Array [
  Array [
    "create",
    "UA-123456",
    "auto",
    "clientTracker0",
  ],
  Array [
    "create",
    "UA-778899",
    "auto",
    "clientTracker1",
  ],
  Array [
    "clientTracker0.send",
    Object {
      "dimension1": "dim1_post60",
      "dimension2": "dim2_post60",
      "hitType": "pageview",
      "location": "https://demo.frontity.test/the-beauties-of-gullfoss/",
      "title": "The Beauties of Gullfoss",
    },
  ],
  Array [
    "clientTracker1.send",
    Object {
      "dimension1": "dim1_post60",
      "dimension2": "dim2_post60",
      "hitType": "pageview",
      "location": "https://demo.frontity.test/the-beauties-of-gullfoss/",
      "title": "The Beauties of Gullfoss",
    },
  ],
]
`;

exports[`Analytics > GoogleAnalytics sendEvent 1`] = `
Array [
  Array [
    "test1.send",
    Object {
      "eventAction": "PWA - test/action",
      "eventCategory": "PWA - test/category",
      "eventLabel": "test/label type: post context: single",
      "hitType": "event",
    },
  ],
  Array [
    "test2.send",
    Object {
      "eventAction": "PWA - test/action",
      "eventCategory": "PWA - test/category",
      "eventLabel": "test/label type: post context: single",
      "hitType": "event",
    },
  ],
]
`;

exports[`Analytics > GoogleAnalytics sendPageView 1`] = `
Array [
  Array [
    "test1.send",
    Object {
      "dimension1": "dim1_post60",
      "dimension2": "dim2_post60",
      "hitType": "pageview",
      "location": "https://demo.frontity.test/the-beauties-of-gullfoss/",
      "title": "The Beauties of Gullfoss",
    },
  ],
  Array [
    "test2.send",
    Object {
      "dimension1": "dim1_post60",
      "dimension2": "dim2_post60",
      "hitType": "pageview",
      "location": "https://demo.frontity.test/the-beauties-of-gullfoss/",
      "title": "The Beauties of Gullfoss",
    },
  ],
  Array [
    "test1.send",
    Object {
      "dimension1": "dim1_cat7",
      "dimension2": "dim2_cat7",
      "hitType": "pageview",
      "location": "https://demo.frontity.test/wp-cat/photography/page/2",
      "title": "Photography",
    },
  ],
  Array [
    "test2.send",
    Object {
      "dimension1": "dim1_cat7",
      "dimension2": "dim2_cat7",
      "hitType": "pageview",
      "location": "https://demo.frontity.test/wp-cat/photography/page/2",
      "title": "Photography",
    },
  ],
]
`;

exports[`Analytics > GoogleAnalytics trackingIds 1`] = `
Array [
  "UA-12345678-1",
  "UA-12345678-2",
]
`;

exports[`Analytics > GoogleAnalytics trackingIds 2`] = `
Array [
  "UA-12345678-1",
  "UA-12345678-2",
]
`;

exports[`Analytics > GoogleAnalytics trackingOptions 1`] = `
Array [
  Object {
    "sendEvents": true,
    "sendPageViews": true,
  },
  Object {
    "sendEvents": true,
    "sendPageViews": true,
  },
]
`;

exports[`Analytics > GoogleAnalytics trackingOptions 2`] = `
Array [
  Object {
    "sendEvents": true,
    "sendPageViews": true,
  },
  Object {
    "sendEvents": true,
    "sendPageViews": false,
  },
]
`;
